# zhiku-knowledge-base-assistant

./: README.md  STORAGE_OPTIONS.md  example_clear_db.py  example_usage.py  main.py  main_streamlit.py  pyproject.toml  run_streamlit.py  test_db_storage.py
db_storage/: chroma.sqlite3
modle/: getmodle.py
static/test_file/: LangChain知识详解.docx  LangChain知识详解.md
tools/: agent.py  ingestion.py  query_db.py
