[project]
name = "zhiku-knowledge-base-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.0",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-chroma>=0.3.0",
    "pypdf>=4.0.0",
    "docx2txt>=0.8",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.54.0",
    "unstructured>=0.21.5",
    "markdown>=3.10.2",
]
